--- a/src/style.css
+++ b/src/style.css
@@ -71,7 +71,12 @@ input[type="number"]::-webkit-inner-spin-button
   border-radius: 50%;
   border: none;
   appearance: none;
-  background-color: #DAE2E8;
   pointer-events: auto;
+}
+.range-start::-webkit-slider-thumb{
+  background-color: #DAE2E8;
+}
+.range-end::-webkit-slider-thumb{
+  background-color: #9D9D9D;
 }
 /*End RangeSlider*/
