--- a/src/style.css
+++ b/src/style.css
@@ -2,8 +2,18 @@
 /*source: mdaquibanwer/price-range-slider-with-min-max-input-price*/
 .wrapper{
   width: 450px;
-  margin-left: 1.5rem;
+  margin: auto;
 }
+/* @media (max-width: 1400px) {
+  .wrapper{
+    margin-left: 1.75rem;
+  }
+}
+@media (max-width: 1200px) {
+  .wrapper{
+    margin-left: 1.5rem;
+  }
+} */
 .field{
   display: flex;
   align-items: center;
@@ -36,7 +46,7 @@
   left: 0;
   right: 0;
   height: 0.5rem;
-  background-color: #9AFFE7;
+  background-color: #0d6efd;
   border: 0;
 }
 
@@ -79,4 +89,31 @@
 .card {
   width:250px;
   height: 150px;
+}
+
+#repo-stat{
+  overflow: scroll;
+  overflow-x: hidden;
+  height: 380px;
+  /* border: 1px solid black; */
+  background-color: #F5F5F5;
+  border-radius: 1rem 0 0 1rem;
+  padding: 0.625rem;
+}
+
+/* div 내부 스크롤바 스타일 */
+#repo-stat::-webkit-scrollbar {
+  width: 0.25rem;
+  height: 0.25rem;
+}
+#repo-stat::-webkit-scrollbar-track {
+  background: #DAE2E8;
+  border-radius: 0.625rem;
+}
+#repo-stat::-webkit-scrollbar-thumb {
+  background: #9D9D9D;
+  border-radius: 0.625rem;
+}
+#repo-stat::-webkit-scrollbar-thumb:hover {
+  background: #9D9D9D;
 }
